--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
+* {
+    box-sizing: border-box;
+}
 body {
+    font-weight: 20;
     margin: 0;
+    background-image: url("/imeges/background.jpg");
+    background-size: cover;
 }
 
 header {
-    position: sticky;
+    /* position: sticky; */
     left: 0;
     top: 0;
     right: 0;
@@ -14,6 +20,8 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    opacity: 80%;
+
 }
 
 .my-name {
@@ -22,10 +30,9 @@ header {
     align-items: center;
     justify-content: center;
     max-width: 40rem;
-    padding: 2rem 6rem;
-    border: solid black 1px;
-
+    border-bottom: solid black 1px;
 }
+
 .navbar-box{
     padding-top: 2rem;
     max-width: 40rem;
@@ -44,4 +51,48 @@ nav ul {
 nav a {
     text-decoration: none;
     color: black;
+}
+main {
+    display: grid;
+    grid-template-columns: 0.1fr 1fr 2fr 0.5fr;
+    grid-template-rows: 0.1fr 2fr 0.1fr;
+    grid-gap: 5rem;
+}
+img {
+    max-width: 30rem;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-column-end: 3;
+    
+}
+.aboutme {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-column-end: 3;
+}
+.aboutme p {
+padding-top: 5rem;
+font-size: 20px;
+
+}
+h3 {
+    font-size: 30px;
+    margin-top: 5rem;
+    
+}
+footer {
+    height: 10rem;
+    background-color: rgb(238, 228, 228);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+    opacity: 80%;
+}
+.border {
+    width: 30rem;
+    margin-top: 1rem;
+    border-top: solid black 1px;
 }
