--- a/styles.css
+++ b/styles.css
@@ -103,9 +103,14 @@ footer {
     background-color: rgb(238, 228, 228);
     padding: 0.3rem;
 }
-.githab {
-    text-decoration: none;
+.githab a {
+    color: black;
+    text-decoration: none;  
 }
+a:hover {
+    color: gray;
+}
+
 .border {
     width: 50%;
     margin-top: 1rem;
