--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
 /*  Tag Selector */
+html {
+    height: 100%;
+}
+
 * {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
@@ -9,6 +13,9 @@ body {
     margin: 0;
     background-image: url("/imeges/background.jpg");
     background-size: cover;
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 img {
     width: 100%;     
@@ -134,7 +141,9 @@ nav a {
 }
 
 /* Main section */
-
+main {
+    flex-grow: 1;
+}
 .main-content-box {
     display: grid;
     grid-template-columns: 0.1fr 1fr 2fr 0.1fr;
