--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,4 @@
 /*  Tag Selector */
-html {
-    height: 100%;
-}
 
 * {
     box-sizing: border-box;
@@ -9,9 +6,13 @@ html {
     font-weight: 100;
 }
 
+html {
+    height: 100%;
+}
+
 body {
     margin: 0;
-    background-image: url("/imeges/background.jpg");
+    background-image: url("imeges/background.jpg");
     background-size: cover;
     min-height: 100%;
     display: flex;
